add descriptions